objects/Survey_Question__c.object
<CustomObject>
    <description>A question that belongs to a Customer Survey.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>A list of options to be used for creating radio buttons
place each option in a separate line.</description>
        <inlineHelpText>A list of options to be used for creating radio
buttons place each option in a separate line.</inlineHelpText>
        <label>Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Survey__c</fullName>
        <label>Customer Survey</label>
        <referenceTo>Customer_Survey__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Label__c</fullName>
        <label>Email Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsScoreQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if question should be used in scoring</description>
        <label>IsScoreQuestion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <displayFormat>Q# {0}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Question_Title__c</fullName>
        <label>Question Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>Defines position of the question on survey screen. Allows only positive numbers.</description>
        <inlineHelpText>Defines position of the question on survey screen. Allows only positive numbers.</inlineHelpText>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TST_ID__c</fullName>
        <formula>Customer_Survey__r.TST_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TST ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Area_Rows__c</fullName>
        <defaultValue>10</defaultValue>
        <description>How many rows should be displayed for text input for questions whose Type = Text Area.</description>
        <inlineHelpText>How many rows should be displayed for text input for questions whose Type = Text Area.</inlineHelpText>
        <label>Text Area Rows</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>TextArea</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>RadioButtons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isManagerNotifyQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isManagerNotifyQuestion</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Answer__c</columns>
        <columns>Question__c</columns>
        <columns>SortOrder__c</columns>
        <columns>Customer_Survey__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Question-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>